Bug 951542 - PJS: Fix race between interrupt check and main thread finishing. (r=nmatsakis)